feat: package reconfigurado para comando start en yarn

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Ing. Francisco Guevara",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "license": "ISC",
